src/components/SmalCompents/DropDown.css
:root{
  --dropdown-textcolor: #41526E;
}
#Housing {
  position: relative;
  display: flex;
  flex-direction: column; /* Changed from row to column */
  align-items: center;
  justify-content: center;

  border: none;
  background-clip: padding-box;
  transition: ease-in-out;
  font-family: "Sanchez";
  background-color: white;

  width: 400px; /* Corrected width to use pixels */
}

#Housing:hover {
  box-shadow: 0px 0px 5px black;
}

.dropbtn1 {
  background-color: #ffffff;
  color: var(--dropdown-textcolor) !important;
  padding: 16px;
  width: 350px; /* Corrected width to use pixels */
  font-size: 16px;
  border: none;
  cursor: pointer;

  text-align: left;
  font-family: "Sanchez";
  font-size: 15px;
  font-weight: 600;
}

.Arrowbox {
  background-color: #ffffff;
  color: var(--dropdown-textcolor) !important;
  padding: 16px;
  font-size: 16px;
  border: none;
  cursor: pointer;
}

.Arrow {
  font-family: "Sanchez";
  font-size: 15px;
  font-weight: 600;
  font-style: normal;
  transition: transform 250ms cubic-bezier(0.96, -0.33, 0, 0.09);
}

.flipped {
  animation: spinFlipped 350ms linear forwards;
}

.unflipped {
  animation: spinUnflipped 350ms linear forwards;
}

@keyframes spinFlipped {
  25% {
      transform: rotate(0deg);
  }

  50% {
      transform: rotate(-180deg);
  }

  75% {
      transform: rotate(-230deg);
  }

  100% {
      transform: rotate(-180deg);
  }
}

@keyframes spinUnflipped {
  25% {
      transform: rotate(-180deg);
  }

  50% {
      transform: rotate(0deg);
  }

  75% {
      transform: rotate(-10deg);
  }

  100% {
      transform: rotate(0deg);
  }
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content1 {
  display: none;
  position: relative;
  background-color: #f1f1f1;
  min-width: 395px;

  left: 0px;

  height: 300px;
  overflow: auto;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;

  border: dashed 2px black;
  border-top: solid 1px;
  background-clip: border-box;
}

.dropdown-content1 a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

.dropdown a:hover {
  background-color: #ddd;
}

.show {
  display: block;
}

